@@ -3,13 +3,12 @@
     <div id="search-field-wrapper">
       <input id="search-field" role="combobox" aria-label="Search"
              aria-autocomplete="list" aria-controls="search-results"
-             type="text" name="search" placeholder="Search"
+             type="text" name="search" placeholder="Search" spellcheck="false"
              title="Type to search, Up and Down to navigate, Enter to load">
     </div>
 
     <ul id="search-results" aria-label="Search Results"
         aria-busy="false" aria-expanded="false"
-        aria-atomic="false" aria-live="polite"
-        aria-relevant="all" class="initially-hidden"></ul>
+        aria-atomic="false" class="initially-hidden"></ul>
   </form>
 </div>
