@@ -1,3 +1,8 @@
+Sun Dec 15 07:09:28 2013  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rdoc:  Update to RDoc master 263a9e5.  This improves the
+	  accessibility of the search box.
+
 Sun Dec 15 05:28:35 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/basic_specification.rb:  Update to RubyGems master
